objects/analyticscc__Dashboard_Automation__c.object
<CustomObject>
    <fields>
        <fullName>analyticscc__Cardinality_Greater_than__c</fullName>
        <label>Cardinality Greater than</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>analyticscc__Cardinality_Less_Than__c</fullName>
        <label>Cardinality Less Than</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>analyticscc__Cardinality_Measure__c</fullName>
        <label>Cardinality Measure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>analyticscc__Max_of_Fields__c</fullName>
        <label>Max # of Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>analyticscc__Measure_Number__c</fullName>
        <label>Measure Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>analyticscc__Utilization_Measure__c</fullName>
        <label>Utilization Measure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>analyticscc__Utilization__c</fullName>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dashboard Automation</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dashboard Automations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>